--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "to-do-app",
   "version": "1.0.0",
   "description": "",
-  "main": "add-task.js",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "keywords": [],
+  "homepage": "https://github.com/Fareedaasif083/To-Do-App#readme",
+  "bugs": {
+    "url": "https://github.com/Fareedaasif083/To-Do-App/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Fareedaasif083/To-Do-App.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
+  "author": "",
   "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/Fareedaasif083/To-Do-App/issues"
+  "main": "add-task.js",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
-  "homepage": "https://github.com/Fareedaasif083/To-Do-App#readme"
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
+  }
 }
